Fix overflow clipping for featured records.

--- a/css/sass/_screen.scss
+++ b/css/sass/_screen.scss
@@ -1090,6 +1090,7 @@ nav.pagination:nth-of-type(3) ul, #content > .pagination:nth-of-type(2) {
 
     .title {
         margin-bottom: .5 * $spacing-unit;
+        overflow: visible;
     }
 
     img {
