--- a/css/style.css
+++ b/css/style.css
@@ -1586,6 +1586,7 @@ select[multiple] {
   }
   #home #featured-records .record .title {
     margin-bottom: 12px;
+    overflow: visible;
   }
   #home #featured-records .record img {
     display: block;
